2008-08-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/ui/fileselector.py:
	Add a getDirectory method and use it from
	the getFilename method. This will have

	* flumotion/wizard/diskersteps.py:
	Move the registerVFSJelly from here to the fileselector.

	* data/glade/disker-wizard.glade:
	* flumotion/wizard/ondemandstep.py:
	Use the file selector for the disker.
	Fixes #1054.

2008-08-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* common/pep8.py (added):
	* misc/pep8.py (deleted):
	* Makefile.am:
	* common/Makefile.am:
	  Used in other projects, so should go in common.
	* common/common.mk:
	  Don't check built .py files, check their .in counterparts in srcdir.

2008-08-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/configure/installed.py.in:
	Use variables everywhere, to avoid using more than 79 characters
	when building in buildbot.

2008-08-05  Johan Dahlin  <johan@flumotion.com>

	* Makefile.am:
	dist misc/pep8.py

2008-08-05  Johan Dahlin  <johan@flumotion.com>

	* flumotion/wizard/diskersteps.py:
	Capitalize, reorder

2008-08-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/common/vfs.py:
	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	* flumotion/ui/fileselector.py:
	Unbreak the fileselector. Make the GIO backend work as good
	as the GnomeVFS one. Show '..' in the gnomevfs backend instead
	of /. Fixes #1079.

2008-08-04  Johan Dahlin  <johan@flumotion.com>

	* flumotion/admin/gtk/adminwindow.py:
	Include Flumotion: in the tray message.

2008-08-04  Johan Dahlin  <johan@flumotion.com>

	* configure.ac: Avoid brackets around parameter to
	AS_VERSION

2008-08-04  Johan Dahlin  <johan@flumotion.com>

	* configure.ac: Send in package and version to AC_INIT instead
	of AM_INIT_AUTOMAKE. Add M4 defines for version components,
	so we don't have to duplicate the numbers.
	Add -Wno-portability, to avoid automake warnings when generating
	Makefiles.

2008-08-04  Johan Dahlin  <johan@flumotion.com>
